completed abomination :P